Update index.html to add ASTE_DPT main repo link in the header

--- a/index.html
+++ b/index.html
@@ -108,6 +108,8 @@
 <div id='ABSADPT'>
     <div class="container table-responsive">
         <br>
+        <h4>ASTE_DPT: A multi-purpose manual data annotation tool for ABSA <a href="https://github.com/yhua219/ABSADatasets" target="_blank">(info)</a></h4>
+        <br>
         <div class="row">
             <div class="col">
                 <div class="card">
